fix warnings/errors when WP_DEBUG is enabled
This is squashed commit of the following:

* fix array index issues in functions.php
* define $post in onemozilla_post_classes()
* quote 'color_scheme' in header.php
* add WordPress 3.4+ header image support (fixes #34)
* remove nonexistent $post_id from get_permalink()
* check if POST exists for featured post
* replace deprecated get_current_theme() with wp_get_theme()
* use isset() instead of array_key_exists() because it's faster
* update password form for WordPress >= 3.4
* bypass redirects and use the CDN

--- a/themes/OneMozilla/css/login.css
+++ b/themes/OneMozilla/css/login.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "Open Sans";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
