--- a/themes/OneMozilla/style.css
+++ b/themes/OneMozilla/style.css
@@ -23,40 +23,40 @@ Tags: two-columns, right-sidebar, fixed-width, responsive, adaptive-layout, cust
 /* Regular */
 @font-face {
   font-family: "Open Sans";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Italic-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Italic-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Italic-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Italic-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Italic-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Italic-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Italic-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Italic-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Semibold-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Semibold-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Semibold-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Semibold-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Semibold-webfont.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-SemiboldItalic-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-SemiboldItalic-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-SemiboldItalic-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-SemiboldItalic-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-SemiboldItalic-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-SemiboldItalic-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-SemiboldItalic-webfont.ttf") format("truetype");
   font-weight: bold;
   font-style: italic;
 }
@@ -64,30 +64,30 @@ Tags: two-columns, right-sidebar, fixed-width, responsive, adaptive-layout, cust
 /* Light */
 @font-face {
   font-family: "Open Sans Light";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Light-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Light-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Light-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Light-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Light-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Light-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Light-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Light-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans Light";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-LightItalic-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-LightItalic-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-LightItalic-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-LightItalic-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-LightItalic-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-LightItalic-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-LightItalic-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-LightItalic-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Open Sans Light";
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot");
-  src: url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
-       url("//www.mozilla.org/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot");
+  src: url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.woff") format("woff"),
+       url("https://mozorg.cdn.mozilla.net/media/fonts/OpenSans-Regular-webfont.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
